--- a/css/styles4.css
+++ b/css/styles4.css
@@ -90,26 +90,87 @@ h1 {
 @media (min-width: 320px) {
   .layout {
     display: grid;
-    grid-template-rows: 12em 3em auto 5fr;
+    grid-template-rows: 4em 5em auto 5fr;
     gap: 10px;
     height: 100vh;
     grid-template-areas: "header" "navegacion" "contenido" "footer"; }
   .header {
     grid-area: header; }
+  .Redes {
+    display: flex;
+    flex-direction: row; }
   .navegacion {
     grid-area: navegacion; }
+  .Video {
+    display: flex;
+    justify-content: center; }
+  .tamaño {
+    max-width: 360px; }
+  .Prueba {
+    display: flex;
+    flex-direction: column;
+    align-content: center; }
+  .p {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .ImgEvento {
+    max-width: 360px; }
   .contenido {
     grid-area: contenido; }
   .footer {
-    grid-area: footer; }
+    grid-area: footer;
+    display: none; }
   .NovedadesA {
     display: flex;
     flex-direction: column; }
   .textoA {
     text-align: center;
-    max-width: 100%; } }
+    max-width: 100%; }
+  .imagenes {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+  .imagenes img {
+    padding: 10px; }
+  .ContactoL {
+    display: flex;
+    align-items: center;
+    flex-direction: column; }
+  .Ultima {
+    display: flex;
+    flex-direction: column;
+    align-content: center; }
+    .Ultima .UltimaC {
+      margin: 1em;
+      padding: 1em;
+      max-width: 90%;
+      border: solid #0d6efd; }
+    .Ultima .TextoC {
+      text-align: justify;
+      margin: 1em;
+      padding: 1em;
+      max-width: 100%; }
+  .tienda {
+    display: flex;
+    flex-direction: column; }
+    .tienda .Nelo5 {
+      max-width: 360px; }
+      .tienda .Nelo5 .TextoT {
+        font-size: 2em; }
+  .TituloTienda {
+    text-align: center; } }
 
 @media (min-width: 1200px) {
+  .layout {
+    display: grid;
+    grid-template-rows: 13em 5em auto 5fr;
+    gap: 10px;
+    height: 100vh;
+    grid-template-areas: "header" "navegacion" "contenido" "footer"; }
+  .footer {
+    grid-area: footer;
+    display: inline; }
   .NovedadesA {
     display: flex;
     justify-content: space-around;
@@ -123,60 +184,73 @@ h1 {
     transition: all 1s; }
     .Video:hover {
       width: 740px;
-      height: 500px; } }
-
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
-/*  */
-/* ----------------------------------------------------------------------------------------------------Pestaña Competencias */
-.Ultima {
-  display: flex; }
-  .Ultima .UltimaC {
-    margin: 1em;
-    padding: 1em;
-    max-width: 60%;
-    border: solid #0d6efd;
-    transition: all 1s; }
-    .Ultima .UltimaC:hover {
-      max-width: 65%; }
-  .Ultima .TextoC {
+      height: 500px; }
+  .Prueba {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; }
+  .tamaño {
+    max-width: 720px; }
+  .ImgEventoP {
+    display: flex;
+    justify-content: center; }
+  .ImgEvento {
+    max-width: 1080px; }
+  .Ultima {
+    display: flex;
+    flex-direction: row; }
+    .Ultima .UltimaC {
+      margin: 1em;
+      padding: 1em;
+      max-width: 60%;
+      border: solid #0d6efd;
+      transition: all 1s; }
+      .Ultima .UltimaC:hover {
+        max-width: 65%; }
+    .Ultima .TextoC {
+      text-align: center;
+      margin: 1em;
+      padding: 1em;
+      max-width: 50%; }
+  .imagenes {
+    display: flex;
+    align-content: center;
+    flex-direction: column; }
+  .imagenes img {
+    padding: 10px; }
+  .tienda {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly; }
+    .tienda .Nelo5 {
+      transition: all 1s;
+      max-width: 1080px; }
+      .tienda .Nelo5:hover {
+        max-width: 1100px; }
+      .tienda .Nelo5 .TextoT {
+        font-size: 2em; }
+  .Evento {
     text-align: center;
-    margin: 1em;
-    padding: 1em;
-    max-width: 50%; }
+    display: flex;
+    justify-content: space-evenly; }
+    .Evento .TextoEvento {
+      display: flex;
+      align-items: center;
+      max-width: 20%; }
+  .ContactoL {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column; } }
 
-/*  */
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
 /* ----------------------------------------------------------------------------------------------------Index Competiciones */
-.Evento {
-  text-align: center;
-  display: flex;
-  justify-content: space-evenly; }
-  .Evento .TextoEvento {
-    display: flex;
-    align-items: center;
-    max-width: 20%; }
-
 /*  */
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
 /* ----------------------------------------------------------------------------------------------------Tienda Oficiales */
-.tienda {
-  display: flex;
-  justify-content: space-evenly; }
-  .tienda .Nelo5 {
-    transition: all 1s;
-    max-width: 1080px; }
-    .tienda .Nelo5:hover {
-      max-width: 1100px; }
-    .tienda .Nelo5 .TextoT {
-      font-size: 2em; }
-
 /*  */
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
