--- a/scss/styles4.scss
+++ b/scss/styles4.scss
@@ -101,7 +101,7 @@ h2{
 @media (min-width: 320px){
     .layout{
         display: grid;
-        grid-template-rows: 12em 3em auto 5fr;
+        grid-template-rows: 4em 5em auto 5fr;
         gap: 10px;
         height: 100vh;
         grid-template-areas: "header"
@@ -114,9 +114,39 @@ h2{
         grid-area: header;
     }
 
+    .Redes{
+        display: flex;
+        flex-direction: row;
+    }
+
     .navegacion{
         grid-area: navegacion;
     }
+
+.Video{
+    display: flex;
+    justify-content: center;
+}
+
+.tamaño{
+    max-width: 360px;
+}
+
+.Prueba{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+}
+
+.p{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.ImgEvento{
+    max-width: 360px;
+}
 
     .contenido{
         grid-area: contenido;
@@ -124,6 +154,7 @@ h2{
 
     .footer{
         grid-area: footer;
+        display: none;
     }
 
     .NovedadesA{
@@ -135,9 +166,78 @@ h2{
     text-align: center;
     max-width: 100%;
     }
+
+    .imagenes{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .imagenes img{
+        padding: 10px;
+    }
+
+    .ContactoL{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    .Ultima{
+        display: flex;
+        flex-direction: column;
+        align-content: center;
+    .UltimaC{
+        margin: 1em;
+        padding: 1em;
+        max-width: 90%;
+        border: solid  $color-1;
+        
+        }
+    .TextoC{
+        text-align: justify;
+        margin: 1em;
+        padding: 1em;
+        max-width: 100%;
+        }
+    }
+
+
+    .tienda{
+        display: flex;
+        flex-direction: column;
+    .Nelo5{
+        max-width: 360px;
+    .TextoT{
+        font-size: 2em;
+        }
+        }
+    }
+    .TituloTienda{
+        text-align: center;
+    }
+
+    
 }
 
+
+
 @media (min-width: 1200px){
+    .layout{
+        display: grid;
+        grid-template-rows: 13em 5em auto 5fr;
+        gap: 10px;
+        height: 100vh;
+        grid-template-areas: "header"
+        "navegacion"
+        "contenido"
+        "footer"
+    }
+
+    .footer{
+        grid-area: footer;
+        display: inline;
+    }
 
     .NovedadesA{
         display: flex;
@@ -158,50 +258,97 @@ h2{
         height: 500px;
         }   
     }
+
+    .Prueba{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .tamaño{
+        max-width: 720px;
+    }
+    
+.ImgEventoP{
+    display: flex;
+    justify-content: center;
 }
 
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
-/*  */ 
-/* ----------------------------------------------------------------------------------------------------Pestaña Competencias */
-.Ultima{
-    display: flex;
-.UltimaC{
-    margin: 1em;
-    padding: 1em;
-    max-width: 60%;
-    border: solid  $color-1;
-    transition: all 1s;
-&:hover{
-    max-width: 65%;
+    .ImgEvento{
+        max-width: 1080px;
+    }
+
+    .Ultima{
+        display: flex;
+        flex-direction: row;
+    .UltimaC{
+        margin: 1em;
+        padding: 1em;
+        max-width: 60%;
+        border: solid  $color-1;
+        transition: all 1s;
+    &:hover{
+        max-width: 65%;
+            }
+        }
+    .TextoC{
+        text-align: center;
+        margin: 1em;
+        padding: 1em;
+        max-width: 50%;
         }
     }
-.TextoC{
-    text-align: center;
-    margin: 1em;
-    padding: 1em;
-    max-width: 50%;
+
+    .imagenes{
+        display: flex;
+        align-content: center;
+        flex-direction: column;
+    }
+
+    .imagenes img{
+        padding: 10px;
+    }
+
+    .tienda{
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+    .Nelo5{
+        transition: all 1s;
+        max-width: 1080px;
+    &:hover{
+        max-width: 1100px;
+    }
+    .TextoT{
+        font-size: 2em;
+        }
+        }
+    }
+
+    .Evento{
+        text-align: center;
+        display: flex;
+        justify-content: space-evenly;
+        
+    .TextoEvento{
+        display: flex;
+        align-items: center;
+        max-width: 20%;
+        }
+    }
+
+    .ContactoL{
+        display: flex;
+        align-items: flex-start;
+        flex-direction: column;
     }
 }
 
-/*  */
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */ 
 
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
 /* ----------------------------------------------------------------------------------------------------Index Competiciones */
-.Evento{
-    text-align: center;
-    display: flex;
-    justify-content: space-evenly;
-    
-.TextoEvento{
-    display: flex;
-    align-items: center;
-    max-width: 20%;
-    }
-}
+
 
 /*  */
 /* ---------------------------------------------------------------------------------------------------- */
@@ -210,20 +357,7 @@ h2{
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
 /* ----------------------------------------------------------------------------------------------------Tienda Oficiales */
-.tienda{
-    display: flex;
-    justify-content: space-evenly;
-.Nelo5{
-    transition: all 1s;
-    max-width: 1080px;
-&:hover{
-    max-width: 1100px;
-}
-.TextoT{
-    font-size: 2em;
-    }
-    }
-}
+
 
 /*  */
 /* ---------------------------------------------------------------------------------------------------- */
