--- a/scss/_Colores.scss
+++ b/scss/_Colores.scss
@@ -2,4 +2,4 @@ $color-1:#0d6efd;
 
 $mapa:(Pcookies: #02265c, Acookies: blue, Tservicios: #0247af, Pprivacidad: #82b1f7);
 
-$estilos:(fondo: #0d6efd, texto: #4f94fc);
+$estilos:(fondo: #0d6efd, texto: #000000);
