--- a/css/styles4.css
+++ b/css/styles4.css
@@ -29,8 +29,6 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: center; }
-  .CompetenciaLogos .Logo2 {
-    max-width: 10rem; }
   .CompetenciaLogos h2 {
     color: #0d6efd; }
 
@@ -108,6 +106,8 @@ h1 {
     display: flex;
     flex-direction: column;
     align-content: center; }
+  .Logo2 {
+    max-width: 9rem; }
   .p {
     display: flex;
     flex-direction: column;
@@ -125,13 +125,24 @@ h1 {
     display: none; }
   .NovedadesA {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    align-items: center; }
   .textoA {
     text-align: center;
     max-width: 100%; }
   .Caja {
     width: 320px;
     height: 210px; }
+  .Evento {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+    .Evento .mapaindex {
+      width: 360px;
+      height: 300px; }
+  .Semifinal {
+    display: flex;
+    align-content: center; }
   .imagenes {
     display: flex;
     align-items: center;
@@ -156,15 +167,23 @@ h1 {
       margin: 1em;
       padding: 1em;
       max-width: 100%; }
+  /* ---------------------------------------------------------------------------------------------------- */
+  /*  */
+  /* ----------------------------------------------------------------------------------------------------Index Competiciones */
   .tienda {
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    align-items: center;
+    text-align: center; }
     .tienda .Nelo5 {
       max-width: 360px; }
       .tienda .Nelo5 .TextoT {
         font-size: 2em; }
   .TituloTienda {
-    text-align: center; } }
+    text-align: center; }
+  /*  */
+  /* ---------------------------------------------------------------------------------------------------- */
+  /*  */ }
 
 @media (min-width: 1200px) {
   .layout {
@@ -196,11 +215,15 @@ h1 {
     justify-content: center; }
   .tamaño {
     max-width: 720px; }
+  .Logo2 {
+    max-width: 10rem; }
   .ImgEventoP {
     display: flex;
     justify-content: center; }
   .ImgEvento {
     max-width: 1080px; }
+  .oculto {
+    display: inline; }
   .Ultima {
     display: flex;
     flex-direction: row; }
@@ -247,12 +270,6 @@ h1 {
     align-items: flex-start;
     flex-direction: column; } }
 
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
-/* ----------------------------------------------------------------------------------------------------Index Competiciones */
-/*  */
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
 /* ----------------------------------------------------------------------------------------------------Tienda Oficiales */
