--- a/scss/styles4.scss
+++ b/scss/styles4.scss
@@ -33,9 +33,7 @@ h1{
     display: flex;
     align-items: center;
     justify-content: center;
-.Logo2{
-    max-width: 10rem;
-    }
+
 h2{
     color: $color-1;
     }
@@ -134,6 +132,10 @@ h2{
     align-content: center;
 }
 
+.Logo2{
+    max-width: 9rem;
+}
+
 .p{
     display: flex;
     flex-direction: column;
@@ -163,8 +165,9 @@ h2{
     }
 
     .NovedadesA{
-        display: flex;
-        flex-direction: column;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
     }
 
     .textoA{
@@ -175,6 +178,21 @@ h2{
     .Caja{
         width: 320px;
         height: 210px;
+    }
+
+    .Evento{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        .mapaindex{
+            width: 360px;
+            height: 300px;
+        }
+    }
+
+    .Semifinal{
+        display: flex;
+        align-content: center;
     }
 
     .imagenes{
@@ -212,21 +230,29 @@ h2{
         }
     }
 
+    /* ---------------------------------------------------------------------------------------------------- */
+/*  */
+/* ----------------------------------------------------------------------------------------------------Index Competiciones */
 
     .tienda{
         display: flex;
         flex-direction: column;
-    .Nelo5{
+        align-items: center;
+        text-align: center;
+        .Nelo5{
         max-width: 360px;
-    .TextoT{
+            .TextoT{
         font-size: 2em;
-        }
+            }
         }
     }
     .TituloTienda{
         text-align: center;
     }
 
+/*  */
+/* ---------------------------------------------------------------------------------------------------- */
+/*  */
     
 }
 
@@ -279,6 +305,10 @@ h2{
         max-width: 720px;
     }
     
+    .Logo2{
+        max-width: 10rem;
+        }
+
 .ImgEventoP{
     display: flex;
     justify-content: center;
@@ -286,6 +316,10 @@ h2{
 
     .ImgEvento{
         max-width: 1080px;
+    }
+
+    .oculto{
+        display: inline;
     }
 
     .Ultima{
@@ -355,14 +389,7 @@ h2{
 }
 
 
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
-/* ----------------------------------------------------------------------------------------------------Index Competiciones */
 
-
-/*  */
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
 
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
@@ -388,10 +415,6 @@ button{
         @extend button;
         background-color: $valor;
     }
-}
-
-.TextoEvento{
-    
 }
 
 .textoA{
