--- a/css/styles4.css
+++ b/css/styles4.css
@@ -73,8 +73,12 @@ h1 {
   text-align: center;
   display: flex;
   justify-content: space-around;
-  border-bottom: 1rem solid #0d6efd;
+  border-bottom: 0.5rem solid #0d6efd;
   border-top: 1rem solid #0d6efd; }
+  .menuinferior h3 {
+    margin: 0; }
+  .menuinferior ul {
+    padding: 0; }
 
 .Disponible {
   display: flex;
@@ -87,6 +91,7 @@ h1 {
 /*  */
 @media (min-width: 320px) {
   .layout {
+    background-color: #ECF9FD;
     display: grid;
     grid-template-rows: 4em auto auto 5fr;
     gap: 10px;
@@ -103,6 +108,7 @@ h1 {
     max-width: 360px;
     text-align: center; }
   .Prueba {
+    margin: 0;
     display: flex;
     flex-direction: column;
     align-content: center; }
@@ -127,6 +133,8 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center; }
+    .NovedadesA h3 {
+      text-align: center; }
   .textoA {
     text-align: center;
     max-width: 100%; }
@@ -153,6 +161,9 @@ h1 {
     display: flex;
     align-items: center;
     flex-direction: column; }
+    .ContactoL .enviar {
+      display: flex;
+      justify-content: center; }
   .Ultima {
     display: flex;
     flex-direction: column;
@@ -163,7 +174,7 @@ h1 {
       max-width: 90%;
       border: solid #0d6efd; }
     .Ultima .TextoC {
-      text-align: justify;
+      text-align: center;
       margin: 1em;
       padding: 1em;
       max-width: 100%; }
@@ -199,9 +210,15 @@ h1 {
     display: flex;
     justify-content: space-around;
     flex-direction: row; }
-    .NovedadesA .textoA {
+    .NovedadesA .NoticiaA {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
       text-align: center;
       max-width: 40%; }
+    .NovedadesA .textoA {
+      text-align: center;
+      max-width: 90%; }
   .Caja {
     width: 720px;
     height: 480px;
@@ -246,17 +263,13 @@ h1 {
     flex-direction: column; }
   .imagenes img {
     padding: 10px; }
-  .tienda {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly; }
-    .tienda .Nelo5 {
-      transition: all 1s;
-      max-width: 1080px; }
-      .tienda .Nelo5:hover {
-        max-width: 1100px; }
-      .tienda .Nelo5 .TextoT {
-        font-size: 2em; }
+  .Nelo5 {
+    transition: all 1s;
+    max-width: 1080px; }
+    .Nelo5:hover {
+      max-width: 1100px; }
+    .Nelo5 .TextoT {
+      font-size: 2em; }
   .Evento {
     text-align: center;
     display: flex;
@@ -267,8 +280,48 @@ h1 {
       max-width: 20%; }
   .ContactoL {
     display: flex;
-    align-items: flex-start;
-    flex-direction: column; } }
+    justify-content: center;
+    flex-direction: column; }
+    .ContactoL .enviar {
+      display: flex;
+      justify-content: center; }
+  /* ---------------------------------------------------------------------------------------------------- */
+  /*  */
+  /* ----------------------------------------------------------------------------------------------------Tienda */
+  .tienda {
+    text-align: start;
+    display: inline; }
+    .tienda .TextoTienda {
+      text-align: start; }
+    .tienda .bTienda {
+      display: flex;
+      flex-direction: row;
+      justify-content: center; }
+    .tienda .aTienda {
+      display: flex;
+      flex-direction: column;
+      align-items: center; }
+    .tienda .Nelo5 {
+      transition: all 1s;
+      max-width: 1080px; }
+      .tienda .Nelo5:hover {
+        max-width: 1100px; }
+      .tienda .Nelo5 .TextoT {
+        font-size: 2em; }
+  .TituloTienda {
+    text-align: center; }
+  /*  */
+  /* ---------------------------------------------------------------------------------------------------- */
+  /*  */
+  /* ---------------------------------------------------------------------------------------------------- */
+  /*  */
+  /* ----------------------------------------------------------------------------------------------------Historia */
+  .PaginaHistoria p {
+    padding-right: 100px;
+    padding-left: 100px; }
+  /*  */
+  /* ---------------------------------------------------------------------------------------------------- */
+  /*  */ }
 
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
