--- a/scss/styles4.scss
+++ b/scss/styles4.scss
@@ -271,7 +271,26 @@ h2{
 /*  */
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */
-    
+
+/* ---------------------------------------------------------------------------------------------------- */
+/*  */
+/* ----------------------------------------------------------------------------------------------------Historia */
+
+.PrimerImagenH{
+    img{
+        width: 375px;
+    }
+}
+
+.SegundaImagenH{
+    img{
+        width: 375px;
+    }
+}
+
+/*  */
+/* ---------------------------------------------------------------------------------------------------- */
+/*  */
 }
 
 
@@ -463,24 +482,74 @@ display: inline;
     }
 }
 
-/*  */
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */ 
+.PrimerImagenH{
+    display: flex;
+    flex-direction: row;
+    
+    .Texto{
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .Imagen{
+        padding-right: 100px;
+    }
 
+    img{
+        border: 0.1rem solid rgb(94, 155, 234);
+        width: 420px;
+        height: 200px;
+    }
 }
 
+.PaginaHistoria{
+    p{
+        padding-right: 100px;
+        padding-left: 100px;
+    }
+}
 
+.SegundaImagenH{
+    display: flex;
+    flex-direction: row-reverse;
+    
+    .Texto{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .Imagen{
+        padding-left: 100px;
+    }
 
-
-
-/* ---------------------------------------------------------------------------------------------------- */
-/*  */
-/* ----------------------------------------------------------------------------------------------------Tienda Oficiales */
-
+    img{
+        border: 0.1rem solid rgb(94, 155, 234);
+        width: 400px;
+        height: 200px;
+    }
+}
 
 /*  */
 /* ---------------------------------------------------------------------------------------------------- */
 /*  */ 
+
+/* ---------------------------------------------------------------------------------------------------- */
+/*  */
+/* ----------------------------------------------------------------------------------------------------Galeria */
+
+    .gridGaleria{
+        img{
+            width: 360px;
+            height: 209px;
+        }
+    }
+
+/*  */
+/* ---------------------------------------------------------------------------------------------------- */
+/*  */ 
+}
+
 
 
 
